--- a/jade/test.jade
+++ b/jade/test.jade
@@ -169,20 +169,136 @@ html
 										input(type="text" name="contactNickname" id="contactNickname" placeholder="Псевдоним, чтобы вас никто не узнал*" required)
 										.input-wrap-error Этот псевдоним уже занят
 									input(type="submit" value="Зарегистрироваться").button.button_orange
-			.test-main-introUnit.test-main-introUnit_01
-				.test-main-introUnit-container
-					.test-main-introUnit-image
-						img(src="images/tour-main-image-01.png" alt="")
-					.test-main-introUnit-info
-						.test-main-introUnit-navigation
-							span Сейчас
-							span.test-main-introUnit-navigation-divider
-							span Тур №1
-						.test-main-introUnit-title «Факты»
-						.test-main-introUnit-text В этом туре будут вопросы обо всем. Не обязательно держать руку на старой энциклопедии. Не лишним было бы еще и на справочнике орнитолога подержать.
-						.test-main-introUnit-button.button.button_orange Начать
-
-
+			.test-main-segment.test-main-segment_01
+				.test-main-introUnit.test-main-introUnit_01
+					.test-main-introUnit-container
+						.test-main-introUnit-image
+							img(src="images/tour-main-image-01.png" alt="")
+						.test-main-introUnit-info
+							.test-main-introUnit-navigation
+								span Сейчас
+								span.test-main-introUnit-navigation-divider
+								span Тур №1
+							.test-main-introUnit-title «Факты»
+							.test-main-introUnit-text В этом туре будут вопросы обо всем. Не обязательно держать руку на старой энциклопедии. Не лишним было бы еще и на справочнике орнитолога подержать.
+							.test-main-introUnit-button.button.button_orange Начать
+				.test-main-unit
+					.test-main-unit-header
+						.test-main-unit-header-wrap
+							.test-main-unit-header-logo-wrap
+								a(href="/").header-logo.header-logo_01
+									img(src="images/bh-logo.svg" alt="")
+								a(href="https://mozgva.com").header-logo.header-logo_02
+									img(src="images/mzgv-logo.svg" alt="")
+							.test-main-unit-header-info
+								.test-main-unit-header-info-image
+									img(src="images/tour-main-image-03.png" alt="")
+								.test-main-unit-header-info-title Тур 1 «Шоу МозгоOn»
+								.test-main-unit-header-info-counter
+									.test-content-progress
+										.test-content-progress-title <span class="current">1</span>/6
+										.test-content-progress-wrap
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+					.test-main-unit-body
+						.test-main-container
+							.test-main-sidebar
+							.test-main-body
+								.test-main-body-unit
+									.test-main-body-unit-wrap
+										.test-main-body-images
+											.test-main-body-images-body
+												.test-main-body-images-wrap.test-main-body-images-wrap_beforeAnswer
+													.test-main-body-images-unit
+														img(src="images/tour1/1-5_V.png" alt="")
+													.test-main-body-images-unit
+														img(src="images/tour1/1-10_O.jpg" alt="")
+													.test-main-body-images-unit
+														img(src="images/tour1/1-11_O.jpg" alt="")
+												.test-main-body-images-wrap.test-main-body-images-wrap_beforeAnswer
+													.test-main-body-images-unit
+														img(src="images/tour1/1-5_V.png" alt="")
+													
+												
+											.test-main-body-images-controls
+												.test-main-body-images-controls-unit.test-main-body-images-controls-unit_prev
+												.test-main-body-images-controls-unit.test-main-body-images-controls-unit_next
+										.test-main-body-text В Венеции с 1993 года действует налог, связанный с необходимостью экономии и рационального использования дефицитного «места на суше». Налогом обложили многочисленные летние ресторанчики и лавки. Налог на что должны уплачивать владельцы таких заведений?
+									.test-main-body-footer
+										.test-main-body-footer-answers
+											.test-main-body-footer-answers-unit.test-main-body-footer-answers-unit_correct Слезы
+											.test-main-body-footer-answers-unit Вариант ответа
+											.test-main-body-footer-answers-unit Вариант ответа
+											.test-main-body-footer-answers-unit Вариант ответа в две строчки
+										.test-main-body-footer-results
+											.test-main-body-footer-results-info
+												.test-main-body-footer-results-info-title Слезы
+												.test-main-body-footer-results-info-text
+													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_correct Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
+													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
+											.test-main-body-footer-results-button 
+												span Следующий вопрос
+				.test-main-unit
+					.test-main-unit-header
+						.test-main-unit-header-wrap
+							.test-main-unit-header-logo-wrap
+								a(href="/").header-logo.header-logo_01
+									img(src="images/bh-logo.svg" alt="")
+								a(href="https://mozgva.com").header-logo.header-logo_02
+									img(src="images/mzgv-logo.svg" alt="")
+							.test-main-unit-header-info
+								.test-main-unit-header-info-image
+									img(src="images/tour-main-image-03.png" alt="")
+								.test-main-unit-header-info-title Тур 1 «Шоу МозгоOn»
+								.test-main-unit-header-info-counter
+									.test-content-progress
+										.test-content-progress-title <span class="current">1</span>/6
+										.test-content-progress-wrap
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+											.test-content-progress-unit
+					.test-main-unit-body
+						.test-main-container
+							.test-main-sidebar
+							.test-main-body
+								.test-main-body-unit
+									.test-main-body-unit-wrap
+										.test-main-body-images
+											.test-main-body-images-body
+												.test-main-body-images-wrap.test-main-body-images-wrap_beforeAnswer
+													.test-main-body-images-unit
+														img(src="images/main-question-filler.png" alt="").filler
+												.test-main-body-images-wrap.test-main-body-images-wrap_beforeAnswer
+													.test-main-body-images-unit
+														img(src="images/tour1/1-5_V.png" alt="")
+													
+												
+											.test-main-body-images-controls
+												.test-main-body-images-controls-unit.test-main-body-images-controls-unit_prev
+												.test-main-body-images-controls-unit.test-main-body-images-controls-unit_next
+										.test-main-body-text В Венеции с 1993 года действует налог, связанный с необходимостью экономии и рационального использования дефицитного «места на суше». Налогом обложили многочисленные летние ресторанчики и лавки. Налог на что должны уплачивать владельцы таких заведений?
+									.test-main-body-footer
+										.test-main-body-footer-answers
+											.test-main-body-footer-answers-unit.test-main-body-footer-answers-unit_correct Слезы
+											.test-main-body-footer-answers-unit Вариант ответа
+											.test-main-body-footer-answers-unit Вариант ответа
+											.test-main-body-footer-answers-unit Вариант ответа в две строчки
+										.test-main-body-footer-results
+											.test-main-body-footer-results-info
+												.test-main-body-footer-results-info-title Слезы
+												.test-main-body-footer-results-info-text
+													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_correct Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
+													.test-main-body-footer-results-info-text-inner.test-main-body-footer-results-info-text-inner_wrong Неверно. За эту добычу цена была уплачена жизнью бабки-процентщицы и ее неудачливой сестры, а речь идет, конечно же, о Родионе Раскольникове из романа Достоевского «Преступление и наказание».
+											.test-main-body-footer-results-button 
+												span Следующий вопрос
+								
 		.popup.popup_form
 			.popup-wrap
 				.popup-title Регистрация на игру
