--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,86 @@
+@font-face {
+  font-family: 'GraublauSansDisplay-Bold';
+  src: url("../fonts/GraublauSansDisplay-Bold.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSansDisplay-Regular';
+  src: url("../fonts/GraublauSansDisplay-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSansItalic';
+  src: url("../fonts/GraublauSansItalic.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSans-Regular';
+  src: url("../fonts/GraublauSans-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSlab-Bold';
+  src: url("../fonts/GraublauSlab-Bold.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSlab-HeavyItalic';
+  src: url("../fonts/GraublauSlab-HeavyItalic.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'GraublauSlab-Heavy';
+  src: url("../fonts/GraublauSlab-Heavy.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
+@media (max-width: 1500px) {
+  .test-main-body {
+    width: calc(100% - 135px);
+    margin-left: -165px; }
+    .test-main-body-images {
+      width: 330px;
+      min-width: 330px;
+      height: 100%; }
+      .test-main-body-images-unit {
+        height: 330px; }
+      .test-main-body-images-wrap .slick-dots {
+        padding-top: 15px; }
+      .test-main-body-images-body {
+        margin-bottom: 50px; }
+    .test-main-body-footer {
+      margin-left: 166px; }
+    .test-main-body-text {
+      font-size: 30px;
+      line-height: 30px;
+      max-width: 850px;
+      margin-bottom: 50px; }
+    .test-main-body-unit {
+      padding-bottom: 0; } }
+
+@media (max-width: 1500px) and (max-height: 700px) {
+  .test-main-body {
+    width: calc(100% - 175px);
+    margin-left: -125px; }
+    .test-main-body-images {
+      width: 250px;
+      min-width: 250px;
+      height: 100%; }
+      .test-main-body-images-unit {
+        height: 250px; }
+      .test-main-body-images-wrap .slick-dots {
+        padding-top: 15px; }
+      .test-main-body-images-body {
+        margin-bottom: 50px; }
+    .test-main-body-footer {
+      margin-left: 126px; } }
+
 @media (max-width: 1279px) {
   .container {
     width: 768px; }
@@ -114,6 +197,7 @@
     .test-main-introUnit-image img {
       max-width: 100%; }
   .test-main-introUnit-container {
+    padding-bottom: 60px;
     padding-top: 60px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -121,7 +205,113 @@
     flex-direction: column;
     width: 768px; }
   .test-main-introUnit-info {
-    margin-left: 0; } }
+    margin-left: 0; }
+  .test-main-body {
+    margin-left: -221px;
+    width: calc(100% - 79px); }
+    .test-main-body-footer {
+      margin-top: auto;
+      margin-left: 221px;
+      width: 450px;
+      height: 222px; }
+      .test-main-body-footer-answers {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between; }
+        .test-main-body-footer-answers-unit {
+          margin: 0;
+          -webkit-box-flex: inherit;
+          -ms-flex: inherit;
+          flex: inherit;
+          width: 224px;
+          margin-bottom: 2px; }
+      .test-main-body-footer-results {
+        height: 224px;
+        background-color: #fff;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; }
+        .test-main-body-footer-results-info {
+          height: 124px;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          padding: 5px 15px 5px 15px;
+          -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+          order: 2;
+          width: 100%; }
+          .test-main-body-footer-results-info-text {
+            line-height: 20px; }
+          .test-main-body-footer-results-info-title {
+            display: none; }
+        .test-main-body-footer-results-button {
+          -webkit-box-ordinal-group: 2;
+          -ms-flex-order: 1;
+          order: 1;
+          width: 100%;
+          height: 110px;
+          line-height: 110px; }
+    .test-main-body-images {
+      height: auto;
+      -webkit-box-pack: start;
+      -ms-flex-pack: start;
+      justify-content: flex-start;
+      width: 330px;
+      min-width: 330px; }
+      .test-main-body-images-unit {
+        height: 330px; }
+      .test-main-body-images-body {
+        margin-left: 55px;
+        margin-top: 27px;
+        margin-bottom: 15px; }
+      .test-main-body-images-controls {
+        margin-top: 0;
+        position: static;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start; }
+    .test-main-body-unit {
+      height: auto;
+      min-height: calc(100vh - 124px); }
+      .test-main-body-unit-wrap {
+        height: calc(100% - 222px);
+        display: block; }
+    .test-main-body-text {
+      margin-top: 30px;
+      margin-left: 88px;
+      margin-bottom: 30px; }
+  .test-main-unit-wrap {
+    height: calc(100% - 197px); }
+  .test-main-unit-header-info {
+    display: block; }
+    .test-main-unit-header-info-image {
+      float: left; }
+    .test-main-unit-header-info-title {
+      margin-left: 0;
+      margin-top: 22px;
+      float: left;
+      padding-left: 20px;
+      margin-bottom: 16px;
+      width: calc(100% - 124px); }
+      .test-main-unit-header-info-title:after {
+        content: "";
+        display: table;
+        clear: both; }
+    .test-main-unit-header-info-counter {
+      float: left;
+      margin-left: 18px; }
+      .test-main-unit-header-info-counter .test-content-progress-wrap {
+        margin-left: 17px; } }
 
 @media (max-width: 767px) {
   .container {
@@ -340,6 +530,7 @@
   .test-main-introUnit-container {
     position: relative;
     padding-top: 43px;
+    padding-bottom: 60px;
     max-width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -363,8 +554,7 @@
     -ms-flex-align: center;
     align-items: center;
     padding: 0 20px;
-    max-width: 100%;
-    padding-bottom: 60px; }
+    max-width: 100%; }
   .test-main-introUnit-navigation {
     margin-bottom: 11px; }
   .test-main-introUnit-title {
@@ -375,7 +565,154 @@
     align-self: flex-start; }
   .test-main-introUnit-button {
     top: 147px;
-    position: absolute; } }
+    position: absolute; }
+  .test-main-unit-header {
+    height: 54px; }
+    .test-main-unit-header .header-logo_01 {
+      margin-right: 15px;
+      width: 50px; }
+    .test-main-unit-header .header-logo_02 {
+      width: 48px; }
+    .test-main-unit-header-logo-wrap {
+      width: 123px;
+      padding-left: 10px; }
+    .test-main-unit-header-info {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-left: 10px;
+      padding-right: 5px;
+      width: 197px; }
+      .test-main-unit-header-info-image {
+        display: none; }
+      .test-main-unit-header-info-title {
+        display: none; }
+      .test-main-unit-header-info-counter {
+        float: none;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; }
+        .test-main-unit-header-info-counter .test-content-progress {
+          -webkit-box-align: center;
+          -ms-flex-align: center;
+          align-items: center;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+          flex-direction: row; }
+          .test-main-unit-header-info-counter .test-content-progress-wrap {
+            padding: 0 3px;
+            height: 20px; }
+          .test-main-unit-header-info-counter .test-content-progress-unit {
+            width: 13px;
+            height: 13px; }
+            .test-main-unit-header-info-counter .test-content-progress-unit:before {
+              background-size: cover; }
+            .test-main-unit-header-info-counter .test-content-progress-unit:after {
+              background-size: cover; }
+          .test-main-unit-header-info-counter .test-content-progress-title {
+            margin-bottom: 0; }
+    .test-main-unit-header-wrap {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+  .test-main-sidebar {
+    display: none; }
+  .test-main-segment_01 .test-main-unit-header {
+    background-color: #8103FF; }
+  .test-main-segment_02 .test-main-unit-header {
+    background-color: #2BC6C6; }
+  .test-main-segment_03 .test-main-unit-header {
+    background-color: #000000; }
+  .test-main-segment_04 .test-main-unit-header {
+    background-color: #61D05F; }
+  .test-main-segment_05 .test-main-unit-header {
+    background-color: #FFA95A; }
+  .test-main-body {
+    margin-left: 0;
+    width: 100%; }
+    .test-main-body-images {
+      width: 240px;
+      min-width: 240px;
+      margin: 0 auto; }
+      .test-main-body-images-body {
+        margin-left: 0px;
+        margin-top: 25px;
+        margin-bottom: 5px; }
+      .test-main-body-images-unit {
+        height: 240px; }
+        .test-main-body-images-unit img {
+          max-height: calc(100% + 20px);
+          max-width: calc(100% + 20px); }
+      .test-main-body-images-controls {
+        display: none; }
+        .test-main-body-images-controls-unit {
+          width: calc(50% - 1px);
+          height: 20px;
+          line-height: 20px; }
+      .test-main-body-images-wrap .slick-dots {
+        padding-top: 5px;
+        height: 15px; }
+    .test-main-body-text {
+      font-family: 'GraublauSansDisplay-Regular';
+      font-size: 18px;
+      line-height: 20px;
+      margin: 0 20px;
+      padding: 0;
+      margin-top: 5px;
+      margin-bottom: 17px; }
+    .test-main-body-footer {
+      margin-left: 0;
+      width: 100%;
+      padding: 0 10px;
+      height: 122px;
+      margin-bottom: 12px; }
+      .test-main-body-footer-answers-unit {
+        width: calc(50% - 1px);
+        height: 60px;
+        font-size: 16px;
+        line-height: 18px;
+        padding: 0 10px; }
+      .test-main-body-footer-results {
+        height: 124px; }
+        .test-main-body-footer-results-button {
+          padding: 0 10px;
+          font-size: 16px;
+          -webkit-box-pack: start;
+          -ms-flex-pack: start;
+          justify-content: flex-start;
+          height: 60px;
+          position: relative;
+          line-height: 60px; }
+          .test-main-body-footer-results-button span:before {
+            display: none; }
+          .test-main-body-footer-results-button:before {
+            content: "";
+            width: 26px;
+            height: 26px;
+            right: 10px;
+            position: absolute;
+            background-image: url(../images/icon-next_alt.svg); }
+        .test-main-body-footer-results-info {
+          height: 64px;
+          padding: 5px 10px; }
+          .test-main-body-footer-results-info-text {
+            font-size: 12px;
+            line-height: 13px; }
+            .test-main-body-footer-results-info-text-inner {
+              padding-right: 30px;
+              padding-left: 0; }
+              .test-main-body-footer-results-info-text-inner:before {
+                left: inherit;
+                right: 0px; }
+    .test-main-body-unit {
+      min-height: calc(100vh - 54px); } }
 
 @media (max-width: 375px) {
   .test-content-unit-question {
